# bbb

20230923_test_ros2/: a.py  test.py
20230924_test_ros1_zeros/: a.py  test.py  trajectory.py
20230924_test_ros2/: test.py
20230924_test_ros2_point/: test.py
20230924_test_trajectory/: a.py
20241201_camera_panel/: CMakeLists.txt  test.pro
20241201_test/: test.cc  test.pro
20241202_camera_panel/test/: Widget.cc  Widget.hh  test.cc  test.pro
20241206_camera_panel/test/: Widget.cc  Widget.hh
20241206_camera_panel_chat_gpt/test/: MainWindow.cpp  MainWindow.h  gstreamer_udp_h264  main.cpp  test.pro
20241207_baumkuchen/test/: Widget.cc
20241207_baumkuchen_2/test/: Widget.cc  Widget.hh
20241207_qt_media_player_video_widget/: memo.txt
20241207_qt_media_player_video_widget/test/: Widget.cc  Widget.hh  test.pro
20241207_rtsp_256_200/test/: CMakeLists.txt  main.cpp
20241207_rtsp_256_200_py/: rtsp_grayscale_receiver.py
20241207_use_qtmultimedia/test/: main.cpp
20241207_use_qtmultimedia_2/test/: main.cpp
20241207_use_qtmultimedia_3/test/: main.cpp  test.pro
20241211_VideoStreamReceiver/test/: VideoStreamReceiver.cc  VideoStreamReceiver.hh  test.cc  test.pro
20241212_udp_h264_receiver/test/: mainwindow.cpp  mainwindow.h  test.pro
20241215_camera_panel_video_widget/test/: VideoWidget.hh
20241215_camera_panel_widget/: Widget.cc  Widget.hh
20241215_camera_panel_widget_2/: CMakeLists.txt  Widget.cc  Widget.hh  test.cc  test.pro
20241215_gst_qt_player/: Makefile  Widget.cc  Widget.hh  test.cc  test.pro
20241215_udp_h264_play_rec/: main.cpp  main_mkv.cpp  makefile  memo.txt
20241216_camera_panel_video_widget_templete/test/: CellWidget.cc  CellWidget.hh  VideoWidget.cc  VideoWidget.hh  Widget.hh  test.pro
20241216_camera_panel_widget_templete/test/: Widget.cc  Widget.hh  test.pro
20241217_video_widget/test/: makefile  (+1 more)
20241220_camera_panel_cv2_frames_2/test/: CMakeLists.txt  frame_receiver.cpp  frame_receiver.h
20241220_camera_panel_gst_frames_2/test/: CMakeLists.txt  gstthread.cpp  gstthread.h  mainwindow.cpp  mainwindow.h  test.pro
20241221_camera_panel_udp_image/test/: CMakeLists.txt  mainwindow.cpp  test.pro  udpthread.cpp  udpthread.h
20241221_camera_panel_udp_jpeg/test/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  test.pro  udpthread.cpp
20241224_camera_streaming_node/: camera_streaming_node.py
20241225_camera_panel_udp_jpeg/test/: CMakeLists.txt  CameraPanel.cc  CameraPanel.hh  test.cc  test.pro
20241225_camera_streaming_node/: camera_streaming_node.py
20241227_camera_streaming_node/: memo20250105.txt
20250108_camera_streaming_node/: camera_streaming_node.py  memo.txt  memo20250114.txt
20250118_opencv_video_writer_fourcc/: a.py  memo.txt  test_X264_mkv.py
20250118_sonar_widget/: memo20250118.txt
20250118_sonar_widget_gemini/: memo20250118.txt
20250122_sonar_player_py/: test.py
20250123_rosbag2_panel/: RosbagPanel.cc  RosbagPanel.hh  SonarPanel.cc  SonarPanel.hh  StartExperimentRosbag.srv  StartRegularRosbag.srv  memo.txt
20250123_rosbag2_recorder/: bag_recorder_service_client.py  bag_recorder_service_server.py  config.yaml  memo.txt
20250123_rosbag2_server/: ros_service_server.py
20250123_rosbag2_test/: a.py  aaaaaaaaa.py  bag_record_with_rosbag2.py
artificial_horizon/: CMakeLists.txt  horizonwidget.cpp  horizonwidget.h  main.cpp  test.pro
homing/: a.py  makefile  test.cc
pwm_control/: p.py  s.py  test.py  test.ui  test_ui.py
pyqtgraph/: test.py
realtime/: a.py  test.py
test/: makefile  test.cc
transparent_overlay/: makefile  test.cc
udp_h264_receiver/: CMakeLists.txt  main.cpp  test.pro  videowidget.cpp  videowidget.h
udp_h264_receiver_2/: main.cpp
udp_h264_receiver_3/: Widget.cc  test.pro
udp_h264_receiver_4/: MainWindow.cpp  test.pro
(+45 files in other folders)
